March 2019
  - Added YubiKey as 2-factor authentication provider
  - Support logging to remote syslog server
  - PHP 7.3 support
  - LAM Pro:
   -> New self service fields: Mail routing (Local address) and Windows (Proxy-Addresses)
   -> Bind DLZ: support DNAME+XFR records and descriptions in records (requires latest LDAP schema)
   -> Cron jobs: added Shadow account expiration notification jobs
   -> New self service fields: Shadow account expiration date, mail routing address, Windows mail alias, Unix + group of names memberships
  - Fixed bugs:
   -> Allow tree-only configurations without any other tab

28.12.2018 6.6
  - New import/export in tools menu
  - YubiKey support
  - Windows users:
    -> Manage "departmentNumber" (needs to be activated via LAM server profile)
    -> Sync group memberships from Unix and group of names
  - LAM Pro:
    -> Easy setting of background color in self service profile
    -> Cron jobs: added Windows/Qmail/FreeRadius account expiration notification jobs
    -> Bind DLZ: usability improvements and small fixes


25.09.2018 6.5
  - Password change possible via LDAP EXOP operation (set LDAP_EXOP as password hash, requires PHP 7.2)
  - Support Imagick and GD
  - Dropped support for Apache 2.2
  - Upload: allow to overwrite existing accounts
  - Personal: photos can be printed in PDF export
  - Kolab updates
  - LAM Pro:
   -> Auto deletion of entries with dynamic directory services support (requires PHP 7.2)
  - Fixed bugs:
   -> Issue when changing key case of uid (#197)


20.06.2018 6.4
  - Imagick PHP extension required
  - Passwords can be checked against external service (e.g. https://api.pwnedpasswords.com/range)
  - Personal/Windows: image cropping support
  - Better filtering of account lists
  - Unix: Unix, Windows and group of names memberships can be synced in group selection
  - IMAP: create mailbox via file upload
  - PHP 7.2 support
  - Support for "," in DN
  - LAM Pro: