@@ -4,6 +4,7 @@ March 2019
   - PHP 7.3 support
   - LAM Pro:
    -> New self service fields: Mail routing (Local address) and Windows (Proxy-Addresses)
+   -> Base URL for emails in self service can be configured in self service profile
    -> Bind DLZ: support DNAME+XFR records and descriptions in records (requires latest LDAP schema)
    -> Cron jobs: added Shadow account expiration notification jobs
    -> New self service fields: Shadow account expiration date, mail routing address, Windows mail alias, Unix + group of names memberships
